use scss reset, fix dark mode button position and add icon

--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -40,6 +40,6 @@
   .btn {
     position: absolute;
     right: -2rem;
-    top: 0.3rem;
+    top: 0.5rem;
   }
 }
