--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,5 @@
+@use 'reset';
+
 html,
 body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -10,20 +12,6 @@ body {
   line-height: 1.6;
   background-color: #171717;
   color: #fff;
-}
-
-*,
-*::before,
-*::after {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-ul,
-ol,
-li {
-  list-style: none;
 }
 
 a {
